--- a/views/index.ejs
+++ b/views/index.ejs
@@ -3,7 +3,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="UTF-8">
-     <title> Sticky Navigation Bar | CodingLab </title> 
+     <title>weather website</title> 
     <link rel="stylesheet" href="style2.css">
     
    </head>
